Seekarte neu überarbeitet Startbildschirm ohne Startbutton

--- a/app/src/main/assets/Infotexte/entscheidungen.html
+++ b/app/src/main/assets/Infotexte/entscheidungen.html
@@ -1,7 +1,9 @@
+<p>Nicht nur auf See sind Entscheidungen wichtig, sondern auch beim Programmieren.</p>
 <p>Die <em><strong>if-</strong></em>Anweisung f&uuml;hrt einen Programmblock nur dann aus, wenn die zugeh&ouml;rige Bedingung <em><strong>wahr</strong></em> ist,ansonsten wird das Programm hinter dem Ende des Blocks fortgesetzt.</p>
 <p>Das <em><strong>if</strong> </em>kann durch einen <em><strong>else</strong></em>-Zweig erg&auml;nzt werden.</p>
 <p>F&uuml;r die logischen Operatoren <em><strong>UND</strong></em>, <em><strong>ODER</strong></em>, und <em><strong>NICHT</strong></em> verwendet C die Symbole<em><strong> &amp;&amp;</strong></em>, <strong>||</strong> und <em><strong>!</strong></em>.</p>
 <p><em><strong>!</strong></em> hat die st&auml;rkste Bindung, <strong>||</strong> hat die schw&auml;chste Bindung.</p>
+<p><em><strong>A XOR B</strong></em> Operation ist &auml;quivalent zu&nbsp;<strong><em>(A UND !B) ODER (!A UND B)</em></strong>.</p>
 <p>C interpretiert <em><strong>0</strong></em> als <strong>falsch</strong> und alle anderen Werte als <strong>wahr</strong>.</p>
 <p>Die <em><strong>switch</strong></em>-Anweisung erlaubt die Auswahl aus mehreren Alternativen.</p>
 <p>Sie wird h&auml;ufig dann eingesetzt,wenn eine gleichwertige <em><strong>if-</strong></em>Konstruktion mehr als drei <em><strong>if-</strong></em>Anweisungen enthielte und somit un&uuml;bersichtlich w&uuml;rde.</p>
@@ -12,162 +14,162 @@
 <p>Die Platzhalter <em><strong>%0</strong></em> und <em><strong>%x</strong></em> werden f&uuml;r oktale bzw. hexadezimale Zahlen verwendet.</p>
 <p>&nbsp;</p>
 <p style="text-align: center;"><strong>Vergleichsoperatoren</strong></p>
-<table style="width: 483px; margin-left: auto; margin-right: auto;">
+<table style="width: 230px; margin-left: auto; margin-right: auto; border-color: black;" border="black">
     <tbody>
     <tr>
-        <td style="width: 216.783px;"><strong>&nbsp;Zeichen</strong></td>
-        <td style="width: 270.217px;"><strong>Bedeutung</strong></td>
+        <td style="width: 78px;"><strong>&nbsp;Zeichen</strong></td>
+        <td style="width: 160px;"><strong>Bedeutung</strong></td>
     </tr>
     <tr>
-        <td style="width: 216.783px;">&nbsp;&lt;</td>
-        <td style="width: 270.217px;">&nbsp;Kleiner als</td>
+        <td style="width: 78px;">&nbsp;&lt;</td>
+        <td style="width: 160px;">&nbsp;Kleiner als</td>
     </tr>
     <tr>
-        <td style="width: 216.783px;">&nbsp;&gt;</td>
-        <td style="width: 270.217px;">&nbsp;Gr&ouml;&szlig;er als</td>
+        <td style="width: 78px;">&nbsp;&gt;</td>
+        <td style="width: 160px;">&nbsp;Gr&ouml;&szlig;er als</td>
     </tr>
     <tr>
-        <td style="width: 216.783px;">&nbsp;&lt;=</td>
-        <td style="width: 270.217px;">&nbsp;Kleiner oder gleich</td>
+        <td style="width: 78px;">&nbsp;&lt;=</td>
+        <td style="width: 160px;">&nbsp;Kleiner oder gleich</td>
     </tr>
     <tr>
-        <td style="width: 216.783px;">&nbsp;&gt;=</td>
-        <td style="width: 270.217px;">&nbsp;Gr&ouml;&szlig;er oder gleich</td>
+        <td style="width: 78px;">&nbsp;&gt;=</td>
+        <td style="width: 160px;">&nbsp;Gr&ouml;&szlig;er oder gleich</td>
     </tr>
     <tr>
-        <td style="width: 216.783px;">&nbsp;!=</td>
-        <td style="width: 270.217px;">&nbsp;Ungleich</td>
+        <td style="width: 78px;">&nbsp;!=</td>
+        <td style="width: 160px;">&nbsp;Ungleich</td>
     </tr>
     <tr>
-        <td style="width: 216.783px;">&nbsp;==</td>
-        <td style="width: 270.217px;">&nbsp;Genau gleich</td>
+        <td style="width: 78px;">&nbsp;==</td>
+        <td style="width: 160px;">&nbsp;Genau gleich</td>
     </tr>
     </tbody>
 </table>
 <p>&nbsp;</p>
-<p style="text-align: center;">Logisches<strong> UND</strong></p>
-<table style="width: 483.333px; margin-left: auto; margin-right: auto;">
+<p style="text-align: center;">Logisches<strong> UND &amp;&amp;</strong></p>
+<table style="width: 236.2px; margin-left: auto; margin-right: auto; border-color: black;" border="black">
     <tbody>
     <tr>
-        <td style="width: 168px;"><strong>Aussage</strong></td>
-        <td style="width: 164px;">&nbsp;</td>
-        <td style="width: 156.333px;"><strong>Ergebnis</strong></td>
+        <td style="width: 78px;" colspan="2"><strong>Aussage</strong>&nbsp;</td>
+        <td style="width: 101.2px;"><strong>Ergebnis</strong></td>
     </tr>
     <tr>
-        <td style="width: 168px;">A</td>
-        <td style="width: 164px;">B</td>
-        <td style="width: 156.333px;">A UND B</td>
+        <td style="width: 78px;">A</td>
+        <td style="width: 67px;">B</td>
+        <td style="width: 101.2px;">A UND B</td>
     </tr>
     <tr>
-        <td style="width: 168px;">Falsch</td>
-        <td style="width: 164px;">Falsch</td>
-        <td style="width: 156.333px;">Falsch</td>
+        <td style="width: 78px;">Falsch</td>
+        <td style="width: 67px;">Falsch</td>
+        <td style="width: 101.2px;">Falsch</td>
     </tr>
     <tr>
-        <td style="width: 168px;">Falsch</td>
-        <td style="width: 164px;">Wahr</td>
-        <td style="width: 156.333px;">Falsch</td>
+        <td style="width: 78px;">Falsch</td>
+        <td style="width: 67px;">Wahr</td>
+        <td style="width: 101.2px;">Falsch</td>
     </tr>
     <tr>
-        <td style="width: 168px;">Wahr</td>
-        <td style="width: 164px;">Falsch</td>
-        <td style="width: 156.333px;">Falsch</td>
+        <td style="width: 78px;">Wahr</td>
+        <td style="width: 67px;">Falsch</td>
+        <td style="width: 101.2px;">Falsch</td>
     </tr>
     <tr>
-        <td style="width: 168px;">Wahr</td>
-        <td style="width: 164px;">Wahr</td>
-        <td style="width: 156.333px;">Wahr</td>
+        <td style="width: 78px;">Wahr</td>
+        <td style="width: 67px;">Wahr</td>
+        <td style="width: 101.2px;">Wahr</td>
     </tr>
     </tbody>
 </table>
-<p style="text-align: center;">Logisches <strong>ODER</strong></p>
-<table style="width: 483px; margin-left: auto; margin-right: auto;">
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">Logisches <strong>ODER ||</strong></p>
+<table style="width: 232px; margin-left: auto; margin-right: auto; border-color: black;" border="black">
     <tbody>
     <tr>
-        <td style="width: 182.733px;"><strong>Aussage</strong></td>
-        <td style="width: 196.267px;">&nbsp;</td>
-        <td style="width: 164px;"><strong>Ergebnis</strong></td>
+        <td style="width: 93px;" colspan="2"><strong>Aussage</strong>&nbsp;</td>
+        <td style="width: 124px;"><strong>Ergebnis</strong></td>
     </tr>
     <tr>
-        <td style="width: 182.733px;">A</td>
-        <td style="width: 196.267px;">B</td>
-        <td style="width: 164px;">A ODER B</td>
+        <td style="width: 93px;">A</td>
+        <td style="width: 91px;">B</td>
+        <td style="width: 124px;">A ODER B</td>
     </tr>
     <tr>
-        <td style="width: 182.733px;">Falsch</td>
-        <td style="width: 196.267px;">Falsch</td>
-        <td style="width: 164px;">Falsch</td>
+        <td style="width: 93px;">Falsch</td>
+        <td style="width: 91px;">Falsch</td>
+        <td style="width: 124px;">Falsch</td>
     </tr>
     <tr>
-        <td style="width: 182.733px;">Falsch</td>
-        <td style="width: 196.267px;">Wahr</td>
-        <td style="width: 164px;">Wahr</td>
+        <td style="width: 93px;">Falsch</td>
+        <td style="width: 91px;">Wahr</td>
+        <td style="width: 124px;">Wahr</td>
     </tr>
     <tr>
-        <td style="width: 182.733px;">Wahr</td>
-        <td style="width: 196.267px;">Falsch</td>
-        <td style="width: 164px;">Wahr</td>
+        <td style="width: 93px;">Wahr</td>
+        <td style="width: 91px;">Falsch</td>
+        <td style="width: 124px;">Wahr</td>
     </tr>
     <tr>
-        <td style="width: 182.733px;">Wahr</td>
-        <td style="width: 196.267px;">Wahr</td>
-        <td style="width: 164px;">Wahr</td>
+        <td style="width: 93px;">Wahr</td>
+        <td style="width: 91px;">Wahr</td>
+        <td style="width: 124px;">Wahr</td>
     </tr>
     </tbody>
 </table>
-<p style="text-align: center;">Logisches <strong>XOR</strong></p>
-<table style="width: 483px; margin-left: auto; margin-right: auto;">
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">Logisches <strong>XOR&nbsp;</strong></p>
+<table style="width: 219px; margin-left: auto; margin-right: auto; border-color: black;" border="black">
     <tbody>
     <tr>
-        <td style="width: 153px;"><strong>Aussage</strong></td>
-        <td style="width: 162.783px;">&nbsp;</td>
-        <td style="width: 140.217px;"><strong>Ergebnis</strong></td>
+        <td style="width: 72px;" colspan="2"><strong>Aussage</strong>&nbsp;</td>
+        <td style="width: 71px;"><strong>Ergebnis</strong></td>
     </tr>
     <tr>
-        <td style="width: 153px;">A</td>
-        <td style="width: 162.783px;">B</td>
-        <td style="width: 140.217px;">A XOR B</td>
+        <td style="width: 72px;">A</td>
+        <td style="width: 55px;">B</td>
+        <td style="width: 71px;">A XOR B</td>
     </tr>
     <tr>
-        <td style="width: 153px;">Falsch</td>
-        <td style="width: 162.783px;">Falsch</td>
-        <td style="width: 140.217px;">Falsch</td>
+        <td style="width: 72px;">Falsch</td>
+        <td style="width: 55px;">Falsch</td>
+        <td style="width: 71px;">Falsch</td>
     </tr>
     <tr>
-        <td style="width: 153px;">Falsch</td>
-        <td style="width: 162.783px;">Wahr</td>
-        <td style="width: 140.217px;">Wahr</td>
+        <td style="width: 72px;">Falsch</td>
+        <td style="width: 55px;">Wahr</td>
+        <td style="width: 71px;">Wahr</td>
     </tr>
     <tr>
-        <td style="width: 153px;">Wahr</td>
-        <td style="width: 162.783px;">Falsch</td>
-        <td style="width: 140.217px;">Wahr</td>
+        <td style="width: 72px;">Wahr</td>
+        <td style="width: 55px;">Falsch</td>
+        <td style="width: 71px;">Wahr</td>
     </tr>
     <tr>
-        <td style="width: 153px;">Wahr</td>
-        <td style="width: 162.783px;">Wahr</td>
-        <td style="width: 140.217px;">Falsch</td>
+        <td style="width: 72px;">Wahr</td>
+        <td style="width: 55px;">Wahr</td>
+        <td style="width: 71px;">Falsch</td>
     </tr>
     </tbody>
 </table>
-<p style="text-align: center;">&nbsp;Logisches <strong>NICHT</strong></p>
-<table style="width: 483px; margin-left: auto; margin-right: auto;">
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&nbsp;Logisches <strong>NICHT !</strong></p>
+<table style="width: 154.8px; margin-left: auto; margin-right: auto; border-color: black;" border="black">
     <tbody>
     <tr>
-        <td style="width: 233.283px;"><strong>Aussage</strong></td>
-        <td style="width: 232.717px;"><strong>Ergebnis</strong></td>
+        <td style="width: 70px;"><strong>Aussage</strong></td>
+        <td style="width: 74.8px;"><strong>Ergebnis</strong></td>
     </tr>
     <tr>
-        <td style="width: 233.283px;">A</td>
-        <td style="width: 232.717px;">NICHT A</td>
+        <td style="width: 70px;">A</td>
+        <td style="width: 74.8px;">NICHT A</td>
     </tr>
     <tr>
-        <td style="width: 233.283px;">Falsch</td>
-        <td style="width: 232.717px;">Wahr</td>
+        <td style="width: 70px;">Falsch</td>
+        <td style="width: 74.8px;">Wahr</td>
     </tr>
     <tr>
-        <td style="width: 233.283px;">Wahr</td>
-        <td style="width: 232.717px;">Falsch</td>
+        <td style="width: 70px;">Wahr</td>
+        <td style="width: 74.8px;">Falsch</td>
     </tr>
     </tbody>
 </table>
