--- a/app/src/main/assets/Infotexte/variablen.html
+++ b/app/src/main/assets/Infotexte/variablen.html
@@ -4,117 +4,116 @@
 <p style="text-align: justify;">C besitzt vier Schl&uuml;sselw&ouml;rter, um die Speicherklasse einer Variablen zu definieren: <em><strong>auto</strong></em>, <em><strong>register</strong></em>, <em><strong>static</strong></em> und <em><strong>extern</strong></em>.</p>
 <p style="text-align: justify;">Der <em><strong>Cast</strong></em>-Operator erzwingt die Umwandlung in einen gew&uuml;nschten Datentyp.</p>
 <p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;"><span style="text-decoration: underline;"><strong>Datentypen</strong></span></p>
-<table style="height: 329px; border-color: black; width: 446px;" border="black">
+<p style="text-align: center;"><strong>Datentypen</strong></p>
+<table style="height: 329px; border-color: black; width: 341.8px; margin-left: auto; margin-right: auto;" border="black">
     <tbody>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;"><em><strong>Type</strong></em></td>
-        <td style="width: 48px; height: 17px;"><em><strong>Bytes</strong></em></td>
-        <td style="width: 112px; height: 17px;"><em><strong>Minimalwert</strong></em></td>
-        <td style="width: 115.2px; height: 17px;"><em><strong>Maximalwert</strong></em></td>
+        <td style="width: 83px; height: 17px;"><em><strong>Type</strong></em></td>
+        <td style="width: 47px; height: 17px;"><em><strong>Bytes</strong></em></td>
+        <td style="width: 99px; height: 17px;"><em><strong>Minimalwert</strong></em></td>
+        <td style="width: 104.8px; height: 17px;"><em><strong>Maximalwert</strong></em></td>
     </tr>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;">char</td>
-        <td style="width: 48px; height: 17px;">1</td>
-        <td style="width: 112px; height: 17px;">-128</td>
-        <td style="width: 115.2px; height: 17px;">127</td>
+        <td style="width: 83px; height: 17px;">char</td>
+        <td style="width: 47px; height: 17px;">1</td>
+        <td style="width: 99px; height: 17px;">-128</td>
+        <td style="width: 104.8px; height: 17px;">127</td>
     </tr>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;">unsigned char</td>
-        <td style="width: 48px; height: 17px;">1</td>
-        <td style="width: 112px; height: 17px;">0</td>
-        <td style="width: 115.2px; height: 17px;">255</td>
+        <td style="width: 83px; height: 17px;">unsigned char</td>
+        <td style="width: 47px; height: 17px;">1</td>
+        <td style="width: 99px; height: 17px;">0</td>
+        <td style="width: 104.8px; height: 17px;">255</td>
     </tr>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;">signed char</td>
-        <td style="width: 48px; height: 17px;">1</td>
-        <td style="width: 112px; height: 17px;">-128</td>
-        <td style="width: 115.2px; height: 17px;">127</td>
+        <td style="width: 83px; height: 17px;">signed char</td>
+        <td style="width: 47px; height: 17px;">1</td>
+        <td style="width: 99px; height: 17px;">-128</td>
+        <td style="width: 104.8px; height: 17px;">127</td>
     </tr>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;">int</td>
-        <td style="width: 48px; height: 17px;">4</td>
-        <td style="width: 112px; height: 17px;">-2147483648</td>
-        <td style="width: 115.2px; height: 17px;">2147483647</td>
+        <td style="width: 83px; height: 17px;">int</td>
+        <td style="width: 47px; height: 17px;">4</td>
+        <td style="width: 99px; height: 17px;">-2147483648</td>
+        <td style="width: 104.8px; height: 17px;">2147483647</td>
     </tr>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;">unsigned int</td>
-        <td style="width: 48px; height: 17px;">4</td>
-        <td style="width: 112px; height: 17px;">0</td>
-        <td style="width: 115.2px; height: 17px;">4293967295</td>
+        <td style="width: 83px; height: 17px;">unsigned int</td>
+        <td style="width: 47px; height: 17px;">4</td>
+        <td style="width: 99px; height: 17px;">0</td>
+        <td style="width: 104.8px; height: 17px;">4293967295</td>
     </tr>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;">signed int</td>
-        <td style="width: 48px; height: 17px;">4</td>
-        <td style="width: 112px; height: 17px;">-2147483648</td>
-        <td style="width: 115.2px; height: 17px;">2147483647</td>
+        <td style="width: 83px; height: 17px;">signed int</td>
+        <td style="width: 47px; height: 17px;">4</td>
+        <td style="width: 99px; height: 17px;">-2147483648</td>
+        <td style="width: 104.8px; height: 17px;">2147483647</td>
     </tr>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;">short int</td>
-        <td style="width: 48px; height: 17px;">2</td>
-        <td style="width: 112px; height: 17px;">-32768</td>
-        <td style="width: 115.2px; height: 17px;">32767</td>
+        <td style="width: 83px; height: 17px;">short int</td>
+        <td style="width: 47px; height: 17px;">2</td>
+        <td style="width: 99px; height: 17px;">-32768</td>
+        <td style="width: 104.8px; height: 17px;">32767</td>
     </tr>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;">unsigned short int</td>
-        <td style="width: 48px; height: 17px;">2</td>
-        <td style="width: 112px; height: 17px;">0</td>
-        <td style="width: 115.2px; height: 17px;">65535</td>
+        <td style="width: 83px; height: 17px;">unsigned short int</td>
+        <td style="width: 47px; height: 17px;">2</td>
+        <td style="width: 99px; height: 17px;">0</td>
+        <td style="width: 104.8px; height: 17px;">65535</td>
     </tr>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;">signed short int</td>
-        <td style="width: 48px; height: 17px;">2</td>
-        <td style="width: 112px; height: 17px;">-32768</td>
-        <td style="width: 115.2px; height: 17px;">32767</td>
+        <td style="width: 83px; height: 17px;">signed short int</td>
+        <td style="width: 47px; height: 17px;">2</td>
+        <td style="width: 99px; height: 17px;">-32768</td>
+        <td style="width: 104.8px; height: 17px;">32767</td>
     </tr>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;">long int</td>
-        <td style="width: 48px; height: 17px;">4</td>
-        <td style="width: 112px; height: 17px;">-2147483648</td>
-        <td style="width: 115.2px; height: 17px;">2147483647</td>
+        <td style="width: 83px; height: 17px;">long int</td>
+        <td style="width: 47px; height: 17px;">4</td>
+        <td style="width: 99px; height: 17px;">-2147483648</td>
+        <td style="width: 104.8px; height: 17px;">2147483647</td>
     </tr>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;">unsigned long int</td>
-        <td style="width: 48px; height: 17px;">4</td>
-        <td style="width: 112px; height: 17px;">0</td>
-        <td style="width: 115.2px; height: 17px;">4293967295</td>
+        <td style="width: 83px; height: 17px;">unsigned long int</td>
+        <td style="width: 47px; height: 17px;">4</td>
+        <td style="width: 99px; height: 17px;">0</td>
+        <td style="width: 104.8px; height: 17px;">4293967295</td>
     </tr>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;">signed long int</td>
-        <td style="width: 48px; height: 17px;">4</td>
-        <td style="width: 112px; height: 17px;">-2147483648</td>
-        <td style="width: 115.2px; height: 17px;">2147483647</td>
+        <td style="width: 83px; height: 17px;">signed long int</td>
+        <td style="width: 47px; height: 17px;">4</td>
+        <td style="width: 99px; height: 17px;">-2147483648</td>
+        <td style="width: 104.8px; height: 17px;">2147483647</td>
     </tr>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;">float</td>
-        <td style="width: 48px; height: 17px;">4</td>
-        <td style="width: 112px; height: 17px;">1.17549E-038</td>
-        <td style="width: 115.2px; height: 17px;">3.40282E+038</td>
+        <td style="width: 83px; height: 17px;">float</td>
+        <td style="width: 47px; height: 17px;">4</td>
+        <td style="width: 99px; height: 17px;">1.17549E-038</td>
+        <td style="width: 104.8px; height: 17px;">3.40282E+038</td>
     </tr>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;">double</td>
-        <td style="width: 48px; height: 17px;">8</td>
-        <td style="width: 112px; height: 17px;">2.22507E-208</td>
-        <td style="width: 115.2px; height: 17px;">1.79769E+308</td>
+        <td style="width: 83px; height: 17px;">double</td>
+        <td style="width: 47px; height: 17px;">8</td>
+        <td style="width: 99px; height: 17px;">2.22507E-208</td>
+        <td style="width: 104.8px; height: 17px;">1.79769E+308</td>
     </tr>
     <tr style="height: 17px;">
-        <td style="width: 144.8px; height: 17px;">long double</td>
-        <td style="width: 48px; height: 17px;">8</td>
-        <td style="width: 112px; height: 17px;">2.22507E-308</td>
-        <td style="width: 115.2px; height: 17px;">1.79769E+308</td>
+        <td style="width: 83px; height: 17px;">long double</td>
+        <td style="width: 47px; height: 17px;">8</td>
+        <td style="width: 99px; height: 17px;">2.22507E-308</td>
+        <td style="width: 104.8px; height: 17px;">1.79769E+308</td>
     </tr>
     <tr>
-        <td style="width: 144.8px;">float</td>
-        <td style="width: 48px;">0</td>
-        <td style="width: 112px;">0</td>
-        <td style="width: 115.2px;">0</td>
+        <td style="width: 83px;">float</td>
+        <td style="width: 47px;">0</td>
+        <td style="width: 99px;">0</td>
+        <td style="width: 104.8px;">0</td>
     </tr>
     </tbody>
 </table>
-<p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;"><span style="text-decoration: underline;"><strong>Flie&szlig;kommakonstanten</strong></span></p>
-<table style="height: 149px; border-color: black; width: 176.4px;" border="black">
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;"><strong>Flie&szlig;kommakonstanten</strong></p>
+<table style="height: 149px; border-color: black; width: 176.4px; margin-left: auto; margin-right: auto;" border="black">
     <tbody>
     <tr>
         <td style="width: 103px;"><em><strong>Darstellung</strong></em></td>
@@ -146,9 +145,9 @@
     </tr>
     </tbody>
 </table>
-<p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;"><span style="text-decoration: underline;"><strong>Zeichenkonstanen</strong></span></p>
-<table style="height: 227px; width: 342.8px; border-color: black;" border="black">
+<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;"><strong>Zeichenkonstanen</strong></p>
+<table style="height: 227px; width: 342.8px; border-color: black; margin-left: auto; margin-right: auto;" border="black">
     <tbody>
     <tr>
         <td style="width: 78px;">'\n'</td>
@@ -196,4 +195,4 @@
     </tr>
     </tbody>
 </table>
-<p>&nbsp;</p>
+<p style="text-align: center;">&nbsp;</p>
